--- a/src/style.css
+++ b/src/style.css
@@ -1214,3 +1214,48 @@ footer {
           margin-right: 6px; }
         .sec-magazine-inside .magazin-block .tovar-btn-block .zakazat-btn {
           margin-left: 0; } }
+
+/* ----------------------------   SECTION - Contacts   ------------------------------- */
+.sec-contacts {
+  padding: 40px 0 120px 0; }
+  .sec-contacts .breadcrumb-custom {
+    background-color: #FAFAFA; }
+  .sec-contacts .contacts-block {
+    padding: 50px 30px 30px 30px;
+    background: #FFFFFF;
+    border: 0.5px solid #E0E0E0; }
+    .sec-contacts .contacts-block .contact-row {
+      padding-left: 75px;
+      margin-bottom: 35px; }
+      .sec-contacts .contacts-block .contact-row .c-label {
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 25px;
+        color: #3E4958;
+        width: 185px; }
+      .sec-contacts .contacts-block .contact-row .c-info {
+        font-size: 16px;
+        line-height: 22px;
+        color: #3E4958; }
+  @media (max-width: 767px) {
+    .sec-contacts {
+      padding: 30px 0 90px 0; }
+      .sec-contacts .breadcrumb-custom {
+        margin-bottom: 45px; }
+      .sec-contacts .contacts-block {
+        padding: 0;
+        padding-top: 10px; }
+        .sec-contacts .contacts-block .contact-row {
+          padding: 15px 18px 25px 25px;
+          padding-bottom: 18px;
+          border-bottom: solid 1px #E0E0E0;
+          margin-bottom: 0;
+          flex-direction: column; }
+          .sec-contacts .contacts-block .contact-row .c-label {
+            width: auto;
+            margin-bottom: 10px; }
+          .sec-contacts .contacts-block .contact-row .c-info {
+            font-size: 14px; }
+        .sec-contacts .contacts-block .c-map {
+          margin-top: 20px;
+          padding: 10px; } }
