--- a/src/style.css
+++ b/src/style.css
@@ -617,7 +617,7 @@ header {
   height: 1px;
   width: 100%;
   margin-bottom: 30px;
-  margin-top: 50px; }
+  margin-top: 20px; }
 
 .overlay a:hover, .overlay a:focus {
   color: #FA8B00; }
@@ -984,7 +984,7 @@ footer {
     border-radius: 50%;
     cursor: pointer; }
   .sec-main-slider .prev-btn {
-    background-color: #fff;
+    background-color: #00458B;
     margin-right: 12px; }
   .sec-main-slider .next-btn {
     background-color: #00458B; }
